--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <span class="author-block">
               <a href="https://utkarshsinha.com">Zheng Wang</a><sup>*2</sup>,</span>
             <span class="author-block">
-              <span class="author-block">Jie Fu</a>,
+              <span class="author-block">Jie Fu</a><sup>*</sup>,
             </span>
             <span class="author-block">
               <span class="author-block">Xingwei Qu</a>,
