--- a/index.html
+++ b/index.html
@@ -115,11 +115,15 @@
           </div>
 
           <div class="is-size-5 publication-authors">
+            <span class="author-block"><sup>*</sup>Equal contribution</span>
+          </div>
+
+          <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Georgia Institute of Technology,</span>
             <span class="author-block"><sup>2</sup>University of Illinois Urbana-Champaign</span>
           </div>
 
-          <div class="column has-text-centered">
+          <!-- <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
@@ -169,7 +173,7 @@
                   </span>
                   <span>Data</span>
                   </a>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -182,7 +186,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/teaser.mp4"
+        <source src=""
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
