--- a/index.html
+++ b/index.html
@@ -182,18 +182,11 @@
   </div>
 </section>
 
-<section class="hero teaser">
+<section class="sfpo-pipeline">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src=""
-                type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
-      </h2>
+    <div class="pipeline">
+      <embed src="./static/images/SFPO_pipeline.pdf" type="application/pdf" style="width:100%; height:600px;">
+      <h2 class="subtitle has-text-centered">SFPO pipeline: fast–reposition–slow optimization.</h2>
     </div>
   </div>
 </section>
