--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <span class="author-block">
               <a href="https://www.isye.gatech.edu/users/ziyan-wang">Ziyan Wang</a><sup>*1</sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Zheng Wang</a><sup>*2</sup>,</span>
+              <a href="https://zkbig.github.io/">Zheng Wang</a><sup>*2</sup>,</span>
             <span class="author-block">
               <span class="author-block">Jie Fu</a><sup>*</sup>,
             </span>
@@ -184,10 +184,12 @@
 
 <section class="sfpo-pipeline">
   <div class="container is-max-desktop">
-    <div class="pipeline">
-      <embed src="./static/images/SFPO_pipeline.pdf" type="application/pdf" style="width:100%; height:600px;">
-      <h2 class="subtitle has-text-centered">SFPO pipeline: fast–reposition–slow optimization.</h2>
-    </div>
+    <figure class="pipeline">
+      <img src="./static/images/SFPO_pipeline.png" alt="SFPO pipeline overview" style="width:100%; height:auto;">
+      <figcaption class="subtitle has-text-centered">
+        SFPO pipeline: fast–reposition–slow optimization.
+      </figcaption>
+    </figure>
   </div>
 </section>
 
