--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 </nav> -->
 
-
+<!-- 
 <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
@@ -180,7 +180,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="sfpo-pipeline">
   <div class="container is-max-desktop">
