--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </div>
     <!--/ Abstract. -->
 
-    <!-- Paper video. -->
+    <!-- <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
@@ -278,7 +278,7 @@
       </div>
     </div>
     <!--/ Paper video. -->
-  </div>
+  </div> -->
 </section>
 
 
