--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <section class="sfpo-pipeline">
   <div class="container is-max-desktop">
     <figure class="pipeline">
-      <img src="./static/images/SFPO_pipeline.png" alt="SFPO pipeline overview" style="width:75%; height:auto;">
+      <img src="./static/images/SFPO_pipeline.pdf" alt="SFPO pipeline overview" style="width:75%;max-width:100%;height:auto;display:block;margin:0 auto;">
       <figcaption class="subtitle has-text-centered">
         SFPO pipeline: fast–reposition–slow optimization.
       </figcaption>
