--- a/index.html
+++ b/index.html
@@ -223,17 +223,13 @@
 </section>
 
 
-<section class="section">
+<section id="method" class="section">
   <div class="container is-max-desktop">
     
     <!-- Method -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
-         <figure class="algorithm">
-          <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:80%;max-width:100%;height:auto;display:block;margin:0 auto;">
-        </figure>
-        
         <div class="content has-text-justified">
           <h3 class="title is-4">Stage I: Fast Trajectory</h3>
           <p>
@@ -299,7 +295,18 @@
       </div>
     </div>
   </div>
+
+  <figure class="algorithm">
+    <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:80%;max-width:100%;height:auto;display:block;margin:0 auto;">
+  </figure>
+  
 </section>
+
+
+<style>
+  #method { background-color: #617DD8; } /* custom color */
+  #method mjx-container { color: inherit; } /* make math match text color */
+</style>
 
 
 <!-- <section class="section" id="BibTeX">
