--- a/index.html
+++ b/index.html
@@ -297,14 +297,14 @@
   </div>
 
   <figure class="algorithm">
-    <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:80%;max-width:100%;height:auto;display:block;margin:0 auto;">
+    <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:70%;max-width:100%;height:auto;display:block;margin:0 auto;">
   </figure>
   
 </section>
 
 
 <style>
-  #method { background-color: #617DD8; } /* custom color */
+  #method { background-color: rgb(245, 245, 245); } /* #f5f5f5 */
   #method mjx-container { color: inherit; } /* make math match text color */
 </style>
 
