--- a/index.html
+++ b/index.html
@@ -225,9 +225,6 @@
 
 <section id="method" class="section">
 
-  <figure class="algorithm">
-    <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:55%;max-width:100%;height:auto;display:block;margin:0 auto;">
-  </figure>
   
   <div class="container is-max-desktop">
     
@@ -235,6 +232,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
+        <figure class="algorithm">
+          <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:55%;max-width:100%;height:auto;display:block;margin:0 auto;">
+        </figure>
+        
         <div class="content has-text-justified">
           <h3 class="title is-4">Stage I: Fast Trajectory</h3>
           <p>
@@ -311,10 +312,6 @@
 
 <section class="section">
   
-  <figure class="algorithm">
-    <img src="./static/images/efficient_training.png" alt="SFPO algorithm" style="width:90%;max-width:100%;height:auto;display:block;margin:0 auto;">
-  </figure>
-  
   <div class="container is-max-desktop">
     <!-- Results -->
     <div class="columns is-centered has-text-centered">
@@ -322,9 +319,12 @@
         <h2 class="title is-3">More Efficient Training</h2>
         <div class="content has-text-justified">
           <p>
-          Not only does SFPO achieve faster convergence in the early stages, but it also sustains higher global accuracy by the end of training. For example, Qwen3-4B-Base model achieves a sharper rise and stabilizes at a higher accuracy within only 150 training steps, while vanilla GRPO cannot surpass this accuracy even after 400 steps, resulting in up to $3.5\times$ fewer rollouts and up to $2.65\times$ fewer wall clock training time. 
-          </p>
+          Not only does SFPO achieve faster convergence in the early stages, but it also sustains higher global accuracy by the end of training. For example, Qwen3-4B-Base model achieves a sharper rise and stabilizes at a higher accuracy within only 150 training steps, while vanilla GRPO cannot surpass this accuracy even after 400 steps, resulting in up to <strong>$3.5\times$</strong> fewer rollouts and up to <strong>$2.65\times$</strong> fewer wall clock training time. 
+          </p> 
         </div>
+        <figure class="algorithm">
+          <img src="./static/images/efficient_training.png" alt="SFPO algorithm" style="width:70%;max-width:100%;height:auto;display:block;margin:0 auto;">
+        </figure>
       </div>
     </div>
 </section>
