--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
         <figure class="algorithm">
-          <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:55%;max-width:100%;height:auto;display:block;margin:0 auto;">
+          <img src="./static/images/SFPO_algorithm.png" alt="SFPO algorithm" style="width:100%;max-width:100%;height:auto;display:block;margin:0 auto;">
         </figure>
         
         <div class="content has-text-justified">
@@ -319,11 +319,14 @@
         <h2 class="title is-3">More Efficient Training</h2>
         <div class="content has-text-justified">
           <p>
-          Not only does SFPO achieve faster convergence in the early stages, but it also sustains higher global accuracy by the end of training. For example, Qwen3-4B-Base model achieves a sharper rise and stabilizes at a higher accuracy within only 150 training steps, while vanilla GRPO cannot surpass this accuracy even after 400 steps, resulting in up to <strong>$3.5\times$</strong> fewer rollouts and up to <strong>$2.65\times$</strong> fewer wall clock training time. 
+          Not only does SFPO achieve faster convergence in the early stages, but it also sustains higher global accuracy by the end of training. For example, Qwen3-4B-Base model achieves a sharper rise and stabilizes at a higher accuracy within only 150 training steps, while vanilla GRPO cannot surpass this accuracy even after 400 steps. Consequently, SFPO leads up to <strong>$3.5\times$</strong> fewer rollouts and up to <strong>$2.65\times$</strong> fewer wall clock training time for Qwen3-4B-Base model. 
           </p> 
         </div>
         <figure class="algorithm">
-          <img src="./static/images/efficient_training.png" alt="SFPO algorithm" style="width:70%;max-width:100%;height:auto;display:block;margin:0 auto;">
+          <img src="./static/images/efficient_training.png" alt="SFPO algorithm" style="width:100%;max-width:100%;height:auto;display:block;margin:0 auto;">
+        </figure>
+         <figure class="algorithm">
+          <img src="./static/images/efficiency_results.png" alt="SFPO algorithm" style="width:100%;max-width:100%;height:auto;display:block;margin:0 auto;">
         </figure>
       </div>
     </div>
